welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (((nums(i) == 6) || (nums(i) == 7)) && (flag = true)) {
                                                                ^